--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,9 @@
 		"node": "*"
 	},
 	"dependencies": {
-		"vscode-languageserver": "^4.1.3",
-		"antlr4": "4.7.2"
+		"antlr4": "4.7.2",
+		"vscode-languageserver": "7.0.0",
+		"vscode-languageserver-textdocument": "1.0.1"
 	},
 	"devDependencies": {
 		"antlr4": "4.7.2"
